Bio timeline text overlap fix

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -118,10 +118,16 @@ $timeline-year-color: gray;
     padding-bottom: 1.5em;
     margin-bottom: 0.5em;
     &.with-context {
-      margin-bottom: 2.2em !important;
+      // margin-bottom: 2.2em !important;
+      @media (max-width: 767px) {
+        // padding-bottom: 2.5em;
+        margin-bottom: 1.5em;
+
+        // height: 100%;
+      }
     }
     h4 {
-      position: absolute;
+      // position: absolute;
       bottom: 0;
       font: {
         size: .9em;
@@ -129,11 +135,15 @@ $timeline-year-color: gray;
       }
       line-height: 1.2em;
       margin: 0;
-      padding: 0 0 0 88px;
+      // padding: 0 0 0 88px;
 
       // color: $timeline-color;
       @media (min-width: 62em) {
         // font-size: 1em;
+      }
+      @media (max-width: 767px) {
+        // margin-top: 2rem !important;
+        // padding: 0 0 0 84px;
       }
     }
     ul {
@@ -165,12 +175,17 @@ $timeline-year-color: gray;
       }
       li {
         margin-left: .5rem;
-        &:before {
-          content: '';
-          margin-left: -.5rem;
-          padding-right: .3rem;
-        }
+        // &:first-child{
+          @media (max-width: 767px) {
+            &:before {
+              // content: '';
+              margin-left: -.5rem;
+              padding-right: .3rem;
+            }
+          }
+        // }
         &:not(:first-child) {
+
           margin-top: .5rem;
         }
         span.highlight {
